force-app/main/default/objects/Forrester_SHIR_UR_CASE_SPONSOR_VIEW__x/Forrester_SHIR_UR_CASE_SPONSOR_VIEW__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_UR_CASE_SPONSOR_VIEW. This external object is used specifically for Utilization Reports to return Sponsors related to a Case by Reporting Year.</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_UR_CASE_SPONSOR_VIEW</externalName>
    <label>Utilization Report Case Sponsor</label>
    <pluralLabel>Utilization Report Case Sponsors</pluralLabel>
</CustomObject>