force-app/main/default/objects/Forrester_SHIR_UR_CASE_SPONSOR_VIEW__x/fields/AFFILIATE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>AFFILIATE_FLAG__c</fullName>
    <description>AFFILIATE_FLAG</description>
    <externalDeveloperName>AFFILIATE_FLAG</externalDeveloperName>
    <label>Affiliated</label>
    <length>5</length>
    <type>Text</type>
</CustomField>