force-app/main/default/objects/Forrester_SHIR_UR_CASE_SPONSOR_VIEW__x/fields/CASE_SPONSOR_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_SPONSOR_RECID__c</fullName>
    <description>CASE_SPONSOR_RECID</description>
    <externalDeveloperName>CASE_SPONSOR_RECID</externalDeveloperName>
    <label>Sponsor Name</label>
    <length>24</length>
    <referenceTo>Forrester_SHIR_CASE_SPONSOR_VIEW__x</referenceTo>
    <relationshipLabel>Sponsors</relationshipLabel>
    <relationshipName>Sponsors</relationshipName>
    <type>ExternalLookup</type>
</CustomField>