force-app/main/default/objects/Forrester_SHIR_UR_CASE_SPONSOR_VIEW__x/fields/DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION__c</fullName>
    <description>DESCRIPTION</description>
    <externalDeveloperName>DESCRIPTION</externalDeveloperName>
    <label>Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>