force-app/main/default/objects/Forrester_SHIR_UR_CASE_SPONSOR_VIEW__x/fields/SPONSOR_NAME__c.field-meta.xml
<CustomField>
    <fullName>SPONSOR_NAME__c</fullName>
    <description>SPONSOR_NAME</description>
    <externalDeveloperName>SPONSOR_NAME</externalDeveloperName>
    <label>Sponsor Name (DEL)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>