force-app/main/default/objects/Forrester_SHIR_UR_CASE_SPONSOR_VIEW__x/fields/SPONSOR_RECID__c.field-meta.xml
<CustomField>
    <fullName>SPONSOR_RECID__c</fullName>
    <description>SPONSOR_RECID</description>
    <externalDeveloperName>SPONSOR_RECID</externalDeveloperName>
    <label>Sponsor Recid</label>
    <length>24</length>
    <type>Text</type>
</CustomField>